# ChatTTS-OpenApi

./: .gitignore  Dockerfile.gpu  README.md  api.py  docker-compose.gpu.yaml  docker-compose.yaml  dockerfile  pyproject.toml  requirements.txt
ChatTTS/model/: gpt.py
