[project]
name = "chattts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "av>=14.0.1",
    "fastapi>=0.115.7",
    "gradio>=5.13.0",
    "ipython>=8.31.0",
    "loguru>=0.7.3",
    "nemo-text-processing>=1.0.2 ; sys_platform == 'linux'",
    "numba>=0.61.0",
    "numpy<2.0.0",
    "pybase16384>=0.3.7",
    "pydub>=0.25.1",
    "pynini==2.1.5 ; sys_platform == 'linux'",
    "requests>=2.32.3",
    "torch>=2.1.0",
    "torchaudio>=2.5.1",
    "tqdm>=4.67.1",
    "transformers>=4.41.1",
    "vector-quantize-pytorch>=1.21.2",
    "vocos>=0.1.0",
    "wetextprocessing>=1.0.3 ; sys_platform == 'linux'",
]
