[project]
name = "chattts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=14.0.1",
    "fastapi>=0.115.7",
    "gradio>=5.13.0",
    "ipython>=8.31.0",
    "loguru>=0.7.3",
    "numba>=0.61.0",
    "numpy<2.0.0",
    "pybase16384>=0.3.7",
    "pydub>=0.25.1",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "transformers>=4.41.1",
    "vector-quantize-pytorch>=1.21.2",
    "vocos>=0.1.0",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.1.0",
  "torchaudio>=2.5.1",
]
cu126 = [
  "torch>=2.1.0",
  "torchaudio>=2.5.1",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu126" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu126", extra = "cu126" },
]
torchaudio = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu126", extra = "cu126" },
]


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

